Fix watchdog startup ordering with auditing

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Security 2021-04-05
    • 30
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The RegisterAuditWatchdog MONGO_INITIALIZER needs to add a dependency on InitializeGlobalAuditManager.

      The sequence of MONGO_INITIALIZERS changed in SERVER-54883 and the watchdog no longer knows about the auditing path as a result.

            Assignee:
            Mark Benvenuto
            Reporter:
            Mark Benvenuto
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: