SERVER-55166 Fix watchdog startup ordering with auditing

GitOrigin-RevId: b918745fbbf47cb610c344802d2e636151dca276